Fix group/node/connection/selection z-index layering

--- a/src/components/edges/edge.css
+++ b/src/components/edges/edge.css
@@ -10,7 +10,7 @@
 
 svg:has(.highlight .svelte-flow__edge-path),
 svg:has(.selected .svelte-flow__edge-path) {
-	z-index: 1;
+	z-index: 2;
 }
 
 .highlight .svelte-flow__edge-path {
